feat(api): added way to test credentials without sushi or endpoint
