# api/lib/controllers/sushi/actions.js
@@ -1,8 +1,10 @@
 const fs = require('fs-extra');
 const path = require('path');
 const send = require('koa-send');
+const { v4: uuidv4 } = require('uuid');
 const {
   format,
+  formatISO,
   subMonths,
 } = require('date-fns');
 
@@ -379,25 +381,14 @@ exports.downloadFile = async (ctx) => {
   });
 };
 
-exports.checkSushiConnection = async (ctx) => {
-  ctx.action = 'sushi/checkConnection';
-  ctx.type = 'json';
+const checkConnection = async (sushi) => {
+  const { endpoint } = sushi;
 
-  const { sushi } = ctx.state;
-  const { endpoint, institution } = sushi;
-
-  ctx.metadata = {
-    sushiId: sushi.id,
-    vendor: endpoint.vendor,
-    institutionId: institution.id,
-    institutionName: institution.name,
-  };
-
-  const threeMonthAgo = format(subMonths(new Date(), 3), 'yyyy-MM');
+  const threeMonthAgo = format(subMonths(new Date(), 3), endpoint.harvestDateFormat || 'yyyy-MM');
 
   const sushiData = {
     sushi,
-    institution,
+    institution: sushi.institution,
     endpoint,
     beginDate: threeMonthAgo,
     endDate: threeMonthAgo,
@@ -477,18 +468,74 @@ exports.checkSushiConnection = async (ctx) => {
     status = 'success';
   }
 
+  return {
+    date: Date.now(),
+    status: status || 'failed',
+    exceptions: exceptions || null,
+    errorCode: errorCode || null,
+  };
+};
+
+exports.checkCredentialsConnection = async (ctx) => {
+  ctx.type = 'json';
+
+  const { endpoint, institution = {}, ...body } = ctx.request.body;
+
+  endpoint.id = endpoint.id || 'tmp';
+  if (!institution.id) {
+    institution.id = 'tmp';
+  }
+
+  const connectionData = await checkConnection({
+    id: uuidv4(),
+    ...body,
+    endpointId: endpoint.id,
+    endpoint,
+    institution,
+  });
+
+  if (body.id) {
+    const sushiCredentialsService = new SushiCredentialsService();
+
+    const sushi = await sushiCredentialsService.findUnique({ where: { id: body.id } });
+
+    await sushiCredentialsService.update({
+      where: { id: sushi.id },
+      data: {
+        updatedAt: sushi.updatedAt,
+        connection: connectionData,
+      },
+    });
+  }
+
+  ctx.body = {
+    ...connectionData,
+    date: formatISO(connectionData.date),
+  };
+};
+
+exports.checkSushiConnection = async (ctx) => {
+  ctx.action = 'sushi/checkConnection';
+  ctx.type = 'json';
+
+  const { sushi } = ctx.state;
+
+  ctx.metadata = {
+    sushiId: sushi.id,
+    vendor: sushi.endpoint.vendor,
+    institutionId: sushi.institution.id,
+    institutionName: sushi.institution.name,
+  };
+
+  const connectionData = await checkConnection(sushi);
+
   const sushiCredentialsService = new SushiCredentialsService();
 
   ctx.body = await sushiCredentialsService.update({
     where: { id: sushi.id },
     data: {
       updatedAt: sushi.updatedAt,
-      connection: {
-        date: Date.now(),
-        status: status || 'failed',
-        exceptions: exceptions || null,
-        errorCode: errorCode || null,
-      },
+      connection: connectionData,
     },
   });
 };
